# klomang-core

./: ADVANCED_MEMPOOL_IMPLEMENTATION.md  BEFORE_AND_AFTER.md  CODEBASE_ANALYSIS.md  Cargo.toml  DAG_REORG_IMPLEMENTATION.md  GHOSTDAG_HARDENNING_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  MEMPOOL_CHECKLIST.md  MEMPOOL_IMPLEMENTATION.md  MEMPOOL_STATUS.txt  PHASE2_REORG_SUMMARY.md  PRIORITY_MEMPOOL_SUMMARY.md  README_MEMPOOL.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REORG_COMPLETION_STATUS.md  REWARD_IMPLEMENTATION.md  SELECTION_REFACTORING.md  verify_refactoring.sh
src/: lib.rs
src/core/: config.rs  mod.rs  state_manager.rs
src/core/consensus/: emission.rs  ghostdag.rs  mod.rs  reward.rs
src/core/consensus/reorg/: ancestor.rs  apply.rs  detect.rs  execute.rs  mod.rs  path.rs  rollback.rs  snapshot.rs  tests.rs  validate.rs
src/core/crypto/: hash.rs  mod.rs
src/core/crypto/verkle/: polynomial_commitment.rs  verkle_tree.rs
src/core/dag/: anticone.rs  dag.rs
src/core/engine/: block_pipeline.rs  engine.rs  ordering.rs  validation.rs
src/core/engine/mempool/: buckets.rs  eviction.rs  fairness.rs  graph.rs  mod.rs  node.rs  package.rs  parallel_validation.rs  rbf.rs  selection.rs  validation.rs
src/core/state/: mod.rs  storage.rs  transaction.rs  v_trie.rs
