[package]
name = "klomang-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "klomang_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
blake3 = "1.5"
k256 = { version = "0.13", features = ["schnorr"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-bls12-381 = "0.4"
ark-ed-on-bls12-381 = "0.4"
ark-ed-on-bls12-381-bandersnatch = "0.4"
ark-serialize = "0.4"